--- a/style.css
+++ b/style.css
@@ -145,7 +145,41 @@ main{
     text-align: center;
     font-size: 18px;
     font-weight: 400;
+    margin: 1rem 0rem;
 }
+.video-img{
+    width: 100%;
+    
+}
+.video-img-container{
+    width: 342px;
+    height: 400px;
+    border-radius: 1rem;
+}
+/* .video-img-container:hover {
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url("./images/rectangle\ 4.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
+.card-description{
+    color: #534C64;
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-align: left;
+}
+.video-card{
+    /* border: 10px solid green; */
+    width: 400px;
+    height: 500px;
+}
+.video-card-container{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 3rem;
+}
+
+
 
 
 
