--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ header{
 }
 .logo-title{
     color: #0B0223;
-    font-family: Work Sans;
     font-size: 45px;
-    font-style: normal;
     font-weight: 700;
 }
 .nav-logo{
@@ -192,11 +190,11 @@ main{
     height: 400px;
     border-radius: 1rem;
 }
-/* .video-img-container:hover {
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url("./images/rectangle\ 4.png");
+.video-img-container:hover {
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%);
     background-repeat: no-repeat;
     background-size: cover;
-} */
+}
 .card-description{
     color: #534C64;
     font-size: 1.25rem;
@@ -214,6 +212,120 @@ main{
     gap: 1.5rem;
     margin-top: 3rem;
 }
+/* Play Section */
+.play-title{
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 700;
+}
+.play-word{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.play-description{
+    color: #534C64;
+    font-size: 1rem;
+    font-weight: 400;
+}
+.play-content{
+    max-width: 360px;
+    text-align: right;
+}
+.play-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 4.5rem;
+    gap: 7rem;
+}
+.play-side-img{
+    position: relative;
+    bottom: 190px;
+    right: 140px;
+}
+/* Games Section */
+.games-btn{
+    background-color: #FFF;
+    border: none;
+    border-radius: 50px;
+}
+.games-content{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 10px;
+    justify-content: center;
+}
+.games-title{
+    color: #0B0223;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+.games-btn:hover{
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border: 1px solid #FF42A5;
+    cursor: pointer;
+}
+.games-container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1.25rem;
+}
+/* Footer Section */
+footer{
+    background-color: #0B0223;
+    text-align: center;
+}
+.footer-logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-logo-title{
+    color: #FFF;
+    font-size: 45px;
+    font-weight: 700;
+}
+footer li a{
+    color: #FFF;
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-decoration: none;
+}
+footer ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    padding: 3rem 0rem;
+}
+.footer-container{
+    padding: 8rem 0rem;
+}
+.social-link{
+    background-color: #0B0223;
+    border: none;
+    margin-inline: 10px;
+    cursor: pointer;
+}
+.footer-description{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 1rem;
+    font-weight: 500;
+    list-style: none;
+    cursor: pointer;
+}
+.footer-info{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 1rem;
+    font-weight: 500;
+}
+
 
 
 
@@ -288,5 +400,46 @@ main{
     }
     .video-card{
         text-align: center;
+    }
+    /* Play Section */
+    .play-container{
+        flex-direction: column;
+    }
+    .play-content{
+        text-align: center;
+    }
+    .play-img-container img{
+        width: 100%;
+    }
+    .play-side-img{
+        width: 40%;
+        bottom: 110px;
+        right: 60px;
+    }
+    /* Games Section */
+    .games-btn{
+        width: 185px;
+    }
+    .games-content{
+        gap: 0px;
+    }
+    .games-container{
+        width: 100%;
+        margin-left: -4rem;
+        gap: 10px;
+        grid-template-columns: repeat(3, 1fr);
+        margin-bottom: 6rem;
+    }
+    /* Footer Section */
+    footer{
+        width: 100%;
+    }
+    .links{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .last-description{
+        display: flex;
+        flex-direction: column;
     }
 }
