--- a/style.css
+++ b/style.css
@@ -190,11 +190,11 @@ main{
     height: 400px;
     border-radius: 1rem;
 }
-.video-img-container:hover {
+/* .video-img-container:hover {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%);
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 .card-description{
     color: #534C64;
     font-size: 1.25rem;
